--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </a>.
     </p>
     <p>
-      <a href="https://wtfm-rs.github.io/doc/introduction/">Introduction</a>
+      <a href="https://wtfm-rs.github.io/doc/wtfm_rs/">Crate wtfm_rs</a>
     </p>
   </body>
 </html>
