--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       </a>.
     </p>
     <p>
-      <a href="https://wtfm-rs.github.io/doc/wtfm_rs/">Crate wtfm_rs</a>
+      <a href="https://wtfm-rs.github.io/doc/wtfm_rs/">Crate wtfm_rs</a> | 
+      <a href="https://wtfm-rs.github.io/wtfm-tokio/doc/wtfm_rs_tokio/">Crate wtfm_rs_tokio</a>
     </p>
   </body>
 </html>
