--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </p>
     <p>
       <a href="https://wtfm-rs.github.io/doc/wtfm_rs/">Crate wtfm_rs</a> | 
-      <a href="https://wtfm-rs.github.io/wtfm-rs-tokio/doc/wtfm_rs_tokio/">Crate wtfm_rs_tokio</a>
+      <a href="https://wtfm-rs.github.io/wtfm-rs-tokio/doc/wtfm_rs_tokio/">Crate wtfm_rs_tokio</a> |
+      <a href="https://wtfm-rs.github.io/wtfm-rs-serde/doc/wtfm_rs_serde/">Crate wtfm_rs_serde</a> 
     </p>
   </body>
 </html>
