--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>wtfm-rs</h1>
     <p>
-      WTFM is a parody of <a href="https://en.wikipedia.org/wiki/RTFM">RTFM</a>,
+      WTFM is based on <a href="https://en.wikipedia.org/wiki/RTFM">RTFM</a>,
       implemented in Rust.
     </p>
     <p>
@@ -14,7 +14,7 @@
     </p>
     <p>
       This page is HTML written by hand, the rest of this site is create by
-      [rustdoc](https://doc.rust-lang.org/1.93.0/rustdoc).
+      <a href="https://doc.rust-lang.org/cargo/commands/cargo-doc.html">cargo doc</a>.
       You can view the source code of the repo: 
       <a href="https://github.com/wtfm-rs/wtfm-rs.github.io">
         github.com/wtfm-rs/wtfm-rs.github.io
