--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <body>
     <h1>wtfm-rs</h1>
     <p>
-      WTFM is based on <a href="https://en.wikipedia.org/wiki/RTFM">RTFM</a>,
-      implemented in Rust.
+      WTFM is <a href="https://en.wikipedia.org/wiki/RTFM">RTFM</a> in Rust.
     </p>
     <p>
       <pre>assert_eq!("WTFM", "RTFM".replace("R", "W"));</pre>
